hid scroll bars, improved contact styling, simplified form capabilities, fixed z-index navbar/contact interaction

--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -3,7 +3,7 @@ footer {
   display: flex; 
   justify-content: center;
   align-items: center;
-  height: 20px;
+  height: v.$footerHeight;
   width: 100vw;
   background-color: black;
 
