--- a/sass/partials/_navbar.scss
+++ b/sass/partials/_navbar.scss
@@ -1,9 +1,15 @@
+@use "./mixins" as m;
+@use "./mediaQuery" as mQ;
+@use "./variables" as v;
+@use "./palette" as p;
+
 // navigation 
 .nav {
   display: flex;
   justify-content: center;
   align-items: flex-end;
   position: fixed;
+  z-index: 1;
   @include m.height-width (33vh, 100vw);
   background-color: #5a5a5a;
 }
@@ -22,10 +28,10 @@
 }
 
 .navbar {
+  position: absolute;
+  z-index: 6;
   display: flex;
   justify-content: space-evenly;
-  position: absolute;
-  z-index: 3;
   bottom: 10px;
   width: 60vw;
   
